; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/dev/fbt/riscv/extr_fbt_isa.c_check_c_sdsp.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/dev/fbt/riscv/extr_fbt_isa.c_check_c_sdsp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATCH_C_SDSP = common dso_local global i32 0, align 4
@RS2_C_RA = common dso_local global i32 0, align 4
@MASK_C_SDSP = common dso_local global i32 0, align 4
@RS2_C_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**)* @check_c_sdsp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_c_sdsp(i32** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %29, %1
  %7 = load i32, i32* %5, align 4
  %8 = icmp slt i32 %7, 2
  br i1 %8, label %9, label %32

9:                                                ; preds = %6
  %10 = load i32**, i32*** %3, align 8
  %11 = load i32*, i32** %10, align 8
  %12 = load i32, i32* %5, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %11, i64 %13
  store i32* %14, i32** %4, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @MATCH_C_SDSP, align 4
  %18 = load i32, i32* @RS2_C_RA, align 4
  %19 = or i32 %17, %18
  %20 = load i32, i32* @MASK_C_SDSP, align 4
  %21 = load i32, i32* @RS2_C_MASK, align 4
  %22 = or i32 %20, %21
  %23 = call i64 @match_opcode(i32 %16, i32 %19, i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %9
  %26 = load i32*, i32** %4, align 8
  %27 = load i32**, i32*** %3, align 8
  store i32* %26, i32** %27, align 8
  store i32 1, i32* %2, align 4
  br label %33

28:                                               ; preds = %9
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %5, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %5, align 4
  br label %6

32:                                               ; preds = %6
  store i32 0, i32* %2, align 4
  br label %33

33:                                               ; preds = %32, %25
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i64 @match_opcode(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
